# finp

./: .aider.chat.history.md  .gitignore  CLAUDE.md  Makefile  NOTES.md  README.md  TODO.md  package.json  pnpm-lock.yaml
backend/: pyproject.toml
backend/src/finp/: __init__.py  accounts.py  categories.py  errors.py  events.py  log.py  operations.py  planned_operations.py  predicates.py  rpc.py  rules.py  rules_engine.py
backend/src/finp/automations/: __init__.py  crud.py  matcher.py  queue.py  subscriber.py  webhook.py
backend/src/finp/commands/: __init__.py  _base.py  accounts.py  automations.py  bilan.py  categories.py  gocardless.py  imports.py  operations.py  planned_operations.py  rules.py  tink.py
backend/src/finp/db/: __init__.py  connection.py  migrations.py
backend/src/finp/db/migrations/: 0001_initial.sql  0002_planned_operations.sql  0003_account_initial_balance.sql  0004_category_recurring.sql  0005_tink.sql  0006_tink_credentials_id.sql  0007_operation_recurring.sql  0008_operation_recurring_type.sql  (+4 more)
backend/src/finp/gocardless/: __init__.py  auth.py  client.py  credentials.py  sync.py
backend/src/finp/tink/: __init__.py  auth.py  client.py  credentials.py  sync.py
backend/tests/: conftest.py  test_accounts.py  test_automations.py  test_categories.py  test_commands_accounts.py  test_commands_bilan.py  test_commands_categories.py  test_commands_imports.py  test_commands_operations.py  test_commands_rules.py  test_db.py  test_events.py  test_operations.py  test_predicates.py  test_rpc.py  test_rules.py  test_rules_engine.py  test_smoke.py
(+64 files in other folders)
