[project]
name = "finp"
version = "0.1.0"
description = "Local-first personal finance — backend"
authors = [
    { name = "Mathieu Dolmen", email = "mathieu.dolmen@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.3",
]

[project.scripts]
finp-rpc = "finp.rpc:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # bugbear
    "SIM",           # simplify
    "RUF",           # ruff-specific
    "D",             # pydocstyle (Google)
]
ignore = [
    "D100", "D104",  # missing module / package docstring — too noisy at this stage
    "D107",          # missing __init__ docstring
    "D102",          # missing method docstring — only document when non-obvious
    "D105",          # missing magic-method docstring
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"src/finp/commands/**" = ["D101"]  # pydantic param/result classes are self-documenting

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
